improvement: reorder guide pages and add guide about evaluation

--- a/content/en/guide/2.user/5.evaluation.md
+++ b/content/en/guide/2.user/5.evaluation.md
@@ -1,6 +1,6 @@
 ---
-title: Adding Badges
-description: "Guide to adding badges to the ePoc journey"
+title: Evaluation
+description: "Guide to configure the evaluation of your training path."
 icon: "lucide:badge-check"
 ---
 
