--- a/content/en/guide/2.user/6.question/0.index.md
+++ b/content/en/guide/2.user/6.question/0.index.md
@@ -1,7 +1,7 @@
 ---
-title: "Evaluation"
+title: "Add a question"
 description: "Guide to integrate an evaluation into your training path."
-icon: "lucide:file-badge"
+icon: "lucide:package-plus"
 ---
 
 To integrate an evaluation into your training path, you need to click on the question button in the side toolbar, choose a question type, and then drag and drop from the side toolbar to the editing area.
