--- a/content/guide/2.user/4.scenario.md
+++ b/content/guide/2.user/4.scenario.md
@@ -8,6 +8,14 @@ La particularité de cet éditeur est que l’interface graphique proposée se v
 
 ![Exemple de scenario](./images/scenario.png)
 
+## Créer un chapitre
+
+Pour créer un chapitre, cliquer sur le bouton **+**
+
+![Ajouter un chapitre](/images/chapter.png){ width=200px }
+
+Vous pouvez alors donner un titre à ce chapitre 1 et lui attribuer des objectifs. Pour créer le chapitre 2, suivez la même démarche en cliquant de nouveau sur le bouton **+**
+
 ## Relier les pages
 
 Les chapitres disposent d’un point rouge et les pages, de deux points rouges de chaque côté. Ces points rouges permettent de connecter les pages entre elles et à un chapitre, selon le parcours pédagogique pour les intégrer à la formation sur mobile.
