--- a/content/guide/2.user/5.evaluation.md
+++ b/content/guide/2.user/5.evaluation.md
@@ -1,6 +1,6 @@
 ---
-title: Ajouter des badges
-description: "Guide pour ajouter des badges au parcours de l'ePoc"
+title: Evaluation
+description: "Guide pour configurer l'évaluation de votre parcours de formation."
 icon: "lucide:badge-check"
 ---
 
@@ -8,7 +8,12 @@ icon: "lucide:badge-check"
 
 Une fois votre scénario conçu, vous pouvez ajouter des badges à votre formation. Les badges sont un moyen de vérifier une étape du parcours, par exemple l'achèvement d'un chapitre ou la réussite d'une ou plusieurs questions, et marquer ainsi cette progression par une récompense.
 
-## Ajouter un nouveau badge
+## Score
+
+
+## Badge
+
+### Ajouter un nouveau badge
 
 Pour ajouter un nouveau badge, suivez ces étapes :
 
@@ -23,7 +28,7 @@ Pour ajouter un nouveau badge, suivez ces étapes :
 #### Saisissez une description.
 ::
 
-## Paramétrer les conditions d'obtention
+### Paramétrer les conditions d'obtention
 
 Pour paramétrer les conditions d'obtention d'un badge, suivez ces étapes :
 
