--- a/content/guide/2.user/6.question/0.index.md
+++ b/content/guide/2.user/6.question/0.index.md
@@ -1,7 +1,7 @@
 ---
-title: "Evaluation"
+title: "Ajouter une question"
 description: "Guide pour intégrer une évaluation à votre parcours de formation."
-icon: "lucide:file-badge"
+icon: "lucide:package-plus"
 ---
 
 Pour intégrer une évaluation à votre parcours de formation, il faut cliquer sur le bouton question de la barre
