add universal link doc

--- a/content/en/guide/2.user/9.export-and-publish/1.index.md
+++ b/content/en/guide/2.user/9.export-and-publish/1.index.md
@@ -14,11 +14,8 @@ It's very simple:
 ##### Click on the export button in the top right
 ##### Choose a location and filename
 ::
-<!-- 1. Click on the export button in the top right
-2. Choose a location and filename -->
 
 ![Export ePoc](/images/export-epoc.gif)
-
 
 ## Share Your ePoc
 
@@ -72,3 +69,15 @@ Once it's uploaded, you can generate a QR Code with [our online tool](/en/tools/
     ---
     ::
 ::
+
+## Universal Link
+
+It is possible to create a universal link to download an ePoc on the app without going through the direct import inside the ePoc application.
+
+To create this universal link, you simply need to add a part to the current download URL of your ePoc, namely: `https://epoc.inria.fr/app-redirect/dl?url=`.
+
+For example, if the current URL of your file is:
+`https://files.inria.fr/LearningLab_public/epocs-prod/E006PE/E006PE.zip`
+
+You need to transform it into:
+`https://epoc.inria.fr/app-redirect/dl?url=https://files.inria.fr/LearningLab_public/epocs-prod/E006PE/E006PE.zip`
