--- a/content/guide/2.user/9.export-and-publish/1.index.md
+++ b/content/guide/2.user/9.export-and-publish/1.index.md
@@ -14,11 +14,8 @@ Pour cela rien de plus simple :
 ##### Cliquer sur le bouton d'export en haut à droite
 ##### Choisissez un emplacement et un nom de fichier
 ::
-<!-- 1. Cliquer sur le bouton d'export en haut à droite
-2. Choisisez un emplacement et un nom de fichier -->
 
 ![Export ePoc](/images/export-epoc.gif)
-
 
 ## Partager votre ePoc
 
@@ -73,3 +70,14 @@ Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](/
     ---
     ::
 ::
+
+## Lien universel
+Il est possible de créer un lien universel pour télécharger un ePoc sur l'application sans passer par l'import direct à l'intérieur de l'application ePoc.
+
+Pour créer ce lien universel, il suffit d'ajouter une partie à l'URL actuelle de téléchargement de votre ePoc, à savoir : `https://epoc.inria.fr/app-redirect/dl?url=`.
+
+Par exemple, si l'URL actuelle de votre fichier est :
+`https://files.inria.fr/LearningLab_public/epocs-prod/E006PE/E006PE.zip`
+
+Il faut la transformer en :
+`https://epoc.inria.fr/app-redirect/dl?url=https://files.inria.fr/LearningLab_public/epocs-prod/E006PE/E006PE.zip`
