improvement: better e009ll description #17

--- a/content/en/epocs/e009ll.md
+++ b/content/en/epocs/e009ll.md
@@ -1,6 +1,6 @@
 ---
 title: "What is AI?"
-description: "This discovery course is for anyone who wants to understand the principles of artificial intelligence (AI) compared to biological intelligence, where to find AI and its main approaches."
+description: "This discovery course is aimed at anyone who wants to understand the principles of artificial intelligence (AI) and biological intelligence (BI). It provides an overview of the main AI approaches and their key applications in our daily lives."
 short: "The principles of artificial intelligence (AI) compared to biological intelligence"
 img: /images/accueil-ia.png
 thumb: /images/thumb-ia.png
