--- a/content/epocs/e009ll.md
+++ b/content/epocs/e009ll.md
@@ -1,6 +1,6 @@
 ---
 title: "C'est quoi l'IA ?"
-description: "Ce parcours découverte s'adresse à toutes celles et tous ceux qui souhaitent comprendre les principes de l'intelligence artificielle (IA) par rapport à l'intelligence biologique, où trouve-t-on de l'IA et ses principales approches."
+description: "Ce parcours découverte s'adresse à toutes celles et tous ceux qui souhaitent comprendre les principes de l’intelligence artificielle (IA) et de l’intelligence biologique (IB). Il permet d’appréhender les principales approches de l’IA et les principaux usages dans notre quotidien."
 short: "Les principes de l'intelligence artificielle (IA) par rapport à l'intelligence biologique"
 img: /images/accueil-ia.png
 thumb: /images/thumb-ia.png
