--- a/content/guide/3.developer/3.data-types.md
+++ b/content/guide/3.developer/3.data-types.md
@@ -7,6 +7,53 @@ icon: "lucide:database"
 Le format des données du fichier `content.json` est un schéma JSON définit à l'aide de classes, types et interfaces
 TypeScript.
 
+## Métadonnées d'un ePoc
+
+Un **ePoc** est défini par les informations suivantes :
+
+- **version** : Version de l'ePoc (exemple : "1.0").
+- **id** : Identifiant unique de l'ePoc (exemple : "epoc-1").
+- **title** : Titre de l'ePoc (exemple : "Introduction à l'apprentissage mobile").
+- **lang** (optionnel) : Langue de l'ePoc (exemple : "fr").
+- **image** : URL de l'image illustrative (exemple : `https://example.com/epoc1/image.png`).
+- **teaser** (optionnel) : Texte d'accroche.
+- **publisher** : Éditeur de l'ePoc (voir la section "Publisher").
+- **authors** : Liste des auteurs (nom et email).
+- **thumbnail** : URL de la miniature (exemple : `https://example.com/epoc1/thumbnail.png`).
+- **summary** : Résumé en HTML (exemple : `<p>Ce module introduit...</p>`).
+- **tags** : Mots-clés associés (exemple : ["mobile", "introduction"]).
+- **objectives** : Objectifs pédagogiques (exemple : ["Comprendre les bases..."]).
+- **prerequisites** : Prérequis pour suivre l'ePoc. (exemple : ["Aucun prérequis nécessaire"]).
+- **chaptersCount** : Nombre de chapitres (exemple : 5).
+- **assessmentsCount** : Nombre d'évaluations (exemple : 2).
+- **chapterDuration** : Durée moyenne d'un chapitre (en minutes, exemple : 10).
+- **download** : Lien de téléchargement (exemple : `https://example.com/epoc1/download`).
+- **edition** : Édition de l'ePoc (exemple : "1.0").
+- **license** : Licence de l'ePoc (voir la section "Licence").
+- **editorVersion** : Version de l'éditeur utilisé (exemple : "1.0.0").
+- **lastModif** : Date de dernière modification (exemple : "2025-08-29").
+
+
+## Métadonnées d'un Publisher
+
+Un **publisher** (éditeur) est défini par :
+
+- **id** : Identifiant unique (exemple : `fr.inria.learninglab`).
+- **name** : Nom de l'éditeur (exemple : "Inria Learning Lab").
+- **description** (optionnel) : Description de l'éditeur.
+- **email** : Email de contact (exemple : `contact@inria.fr`).
+- **logo** (optionnel) : URL du logo (exemple : `https://example.com/logo.png`).
+- **website** (optionnel) : URL du site web (exemple : `https://example.com`).
+
+## Métadonnées d'une licence
+
+Une **licence** est définie par :
+
+- **name** : Nom de la licence (exemple : "CC-BY-SA-4.0").
+- **url** : Lien vers le texte de la licence (exemple : `https://creativecommons.org/licenses/by-sa/4.0/`).
+- **content** : Texte complet de la licence.
+
+
 Pour en apprendre plus sur le format de données, nous vous invitons à utiliser les classes ePocs (v1) téléchargeble
 depuis [npm](https://www.npmjs.com/package/@epoc/epoc-types).
 
