improvement: improve evaluation doc by adding learning events definitions

--- a/content/en/guide/2.user/5.evaluation.md
+++ b/content/en/guide/2.user/5.evaluation.md
@@ -1,47 +1,79 @@
 ---
 title: Evaluation
-description: "Guide to configure the evaluation of your training path."
+description: "Guide to configuring the evaluation of your training program."
 icon: "lucide:badge-check"
 ---
 
 ## Introduction
+Once your scenario is designed, you can configure the evaluation system for your training program. Two evaluation systems are available:
 
-Once your scenario is designed, you can add badges to your training. Badges are a way to verify a step in the journey, such as the completion of a chapter or the success of one or more questions, and thus mark this progress with a reward.
+1. **Badge System**:
+   Badges allow you to mark the learner's progress by rewarding the completion of specific steps (e.g., a chapter or successful completion of a series of questions). The certificate of achievement is unlocked when the learner earns a certain number of badges, configurable in the ePoc settings. This certificate will include:
+    - The title of the ePoc
+    - The learner's name
+    - The list of badges earned
+    - The issuance date
+    - A unique identification number
 
-## Adding a New Badge
+2. **Point-Based System**:
+   Each question can earn points. The certificate of achievement is unlocked when the learner reaches a defined point threshold. This certificate will include:
+    - The title of the ePoc
+    - The learner's name
+    - The issuance date
+    - A unique identification number
 
+You can choose the system that best fits your pedagogical needs.
+
+## Score
+Each question in your program can be assigned a score. Here's how to configure points for a question:
+
+- **Point Allocation**:
+  For each question, you can define the number of points awarded for a correct answer. This allows you to weight the importance of questions in the overall evaluation.
+
+- **Success Threshold**:
+  In the ePoc settings, you can define the point threshold required to unlock the certificate of achievement.
+
+## Badge
+
+### Adding a New Badge
 To add a new badge, follow these steps:
-
 ::steps{level=4}
 #### Click on the badges menu, located at the bottom of the left sidebar.
-
-#### Click on the `+` button.
-
-#### Add a title to your new badge.
-
-#### Choose an icon or import your own.
-
+#### Click the `+` button.
+#### Choose an icon or upload your own.
 #### Enter a description.
 ::
 
-## Setting Up Obtaining Conditions
-
-To set up the conditions for obtaining a badge, follow these steps:
-
+### Setting the Conditions for Earning a Badge
+To set the conditions for earning a badge, follow these steps:
 ::steps{level=4}
-#### Click on the 'Configure Conditions' button.
-
-#### Click on the 'Add a Condition' button.
-
+#### Click the 'Configure Conditions' button.
+#### Click the 'Add a Condition' button.
 #### Fill in the three fields from left to right:
 ::steps{level=5}
 ##### First Field
-Select an element from the educational scenario to apply a condition to it. Click on the element to which you want to apply the condition.
-
+Select a pedagogical scenario element to apply a condition. Click on the element you want to apply the condition to.
 ##### Second Field
-Choose the condition to apply to the selected element. For example, if you have chosen a video, you will have the choice between 'Played' or 'Watched'.
-
+Choose the condition to apply to the selected element. For example, if you selected a video, you can choose between 'Played' or 'Watched'.
 ##### Third Field
 Define the value of the condition.
 ::
 ::
+
+## Certificate
+Two types of certificates are available depending on the chosen evaluation system:
+
+1. **Certificate with Badges**:
+   Awarded when the learner earns the required number of badges. It includes:
+    - The title of the ePoc
+    - The learner's name
+    - The list of badges earned
+    - The issuance date
+    - A unique identification number
+
+2. **Certificate with Points**:
+   Awarded when the learner reaches the defined point threshold. It includes:
+    - The title of the ePoc
+    - The learner's name
+    - The issuance date
+    - A unique identification number
