--- a/content/guide/2.user/5.evaluation.md
+++ b/content/guide/2.user/5.evaluation.md
@@ -5,47 +5,77 @@ icon: "lucide:badge-check"
 ---
 
 ## Introduction
+Une fois votre scénario conçu, vous pouvez configurer le système d'évaluation de votre formation. Deux systèmes d'évaluation sont disponibles :
 
-Une fois votre scénario conçu, vous pouvez ajouter des badges à votre formation. Les badges sont un moyen de vérifier une étape du parcours, par exemple l'achèvement d'un chapitre ou la réussite d'une ou plusieurs questions, et marquer ainsi cette progression par une récompense.
+1. **[Système de badges](#badge)** :
+   Les badges permettent de marquer la progression de l'apprenant en récompensant l'achèvement d'étapes spécifiques (par exemple, un chapitre ou la réussite à une série de questions). L'attestation de réussite est débloquée lorsque l'apprenant obtient un certain nombre de badges, configurable dans les paramètres de l'ePoc. Cette attestation comprendra :
+    - Le titre de l'ePoc
+    - Le nom de l'apprenant
+    - La liste des badges obtenus
+    - La date de délivrance
+    - Un numéro d'identification unique
 
-## Score
+2. **[Système basé sur les points](#score)** :
+   Chaque question peut rapporter des points. L'attestation de réussite est débloquée lorsque l'apprenant atteint un seuil de points défini. Cette attestation comprendra :
+    - Le titre de l'ePoc
+    - Le nom de l'apprenant
+    - La date de délivrance
+    - Un numéro d'identification unique
 
+Vous pouvez choisir le système qui correspond le mieux à vos besoins pédagogiques.
 
 ## Badge
 
 ### Ajouter un nouveau badge
-
 Pour ajouter un nouveau badge, suivez ces étapes :
-
-
 ::steps{level=4}
 #### Cliquez sur le menu des badges, situé en bas de la barre latérale à gauche de l'écran.
-
 #### Cliquez sur le bouton `+`.
-
 #### Choisissez une icône ou importez la vôtre.
-
 #### Saisissez une description.
 ::
 
 ### Paramétrer les conditions d'obtention
-
 Pour paramétrer les conditions d'obtention d'un badge, suivez ces étapes :
-
 ::steps{level=4}
 #### Cliquez sur le bouton 'Configurer les conditions'.
-
 #### Cliquez sur le bouton 'Ajouter une condition'.
-
 #### Remplissez les trois champs de gauche à droite :
 ::steps{level=5}
 ##### Premier champ
 Sélectionnez un élément du scénario pédagogique pour lui appliquer une condition. Cliquez sur l'élément auquel vous voulez appliquer la condition.
-
 ##### Second champ
 Choisissez la condition à appliquer à l'élément sélectionné. Par exemple, si vous avez choisi une vidéo, vous aurez le choix entre 'Joué' ou 'Regardé'.
-
 ##### Troisième champ
 Définissez la valeur de la condition.
 ::
 ::
+
+## Score
+Chaque question de votre parcours peut être associée à un score. Voici comment configurer les points pour une question :
+
+- **Attribution des points** :
+  Pour chaque question, vous pouvez définir le nombre de points accordés en cas de bonne réponse. Cela permet de pondérer l'importance des questions dans l'évaluation globale.
+
+- **Seuil de réussite** :
+  Dans les paramètres de l'ePoc, vous pouvez définir le seuil de points nécessaire pour débloquer l'attestation de réussite.
+
+
+## Attestation
+Deux types d'attestation sont disponibles selon le système d'évaluation choisi :
+
+1. **Attestation avec badges** :
+   Délivrée lorsque l'apprenant obtient le nombre de badges requis. Elle inclut :
+    - Le titre de l'ePoc
+    - Le nom de l'apprenant
+    - La liste des badges obtenus
+    - La date de délivrance
+    - Un numéro d'identification unique
+
+2. **Attestation avec points** :
+   Délivrée lorsque l'apprenant atteint le seuil de points défini. Elle inclut :
+    - Le titre de l'ePoc
+    - Le nom de l'apprenant
+    - La date de délivrance
+    - Un numéro d'identification unique
+
