fix: watched and listened definition

--- a/content/en/guide/2.user/5.learning-events.md
+++ b/content/en/guide/2.user/5.learning-events.md
@@ -65,7 +65,7 @@ obtaining, unlocking or branching content.
         ::
         
         ::field{name="listened" type="boolean"}
-        True when a user listens to at least 5 seconds of an audio podcast.
+        True when a user listens to at least 50% of an audio podcast.
         ::
     ::
 ::
@@ -78,7 +78,7 @@ obtaining, unlocking or branching content.
         ::
         
         ::field{name="watched" type="boolean"}
-        True when a user watches at least 5 seconds of a video.
+        True when a user watches at least 50% of a video.
         ::
     ::
 ::
