--- a/content/guide/2.user/5.learning-events.md
+++ b/content/guide/2.user/5.learning-events.md
@@ -50,7 +50,7 @@ conditions d'obtention ou de déblocage.
         ::
         
         ::field{name="listened" type="boolean"}
-        Vrai lorsqu'un utilisateur a écouté au moins 5 secondes d'un podcast audio.
+        Vrai lorsqu'un utilisateur a écouté au moins 50% d'un podcast audio.
         ::
     ::
 ::
@@ -63,7 +63,7 @@ conditions d'obtention ou de déblocage.
         ::
         
         ::field{name="watched" type="boolean"}
-        Vrai lorsqu'un utilisateur a regardé au moins 5 secondes d'une vidéo.
+        Vrai lorsqu'un utilisateur a regardé au moins 50% d'une vidéo.
         ::
     ::
 ::
