feat: mermaid documentation

--- a/content/en/guide/2.user/6.content/2.wysiwyg/2.mermaid.md
+++ b/content/en/guide/2.user/6.content/2.wysiwyg/2.mermaid.md
@@ -1,8 +1,43 @@
 ---
 title: "Mermaid"
-description: "Guide to integrate Mermaid content into your training path."
+description: "Guide to integrate Mermaid content into your training course."
 icon: "lucide:chart-area"
 ---
-In the WYSIWYG editor, you can write Mermaid code.
+In the WYSIWYG editor, you can write Mermaid code. Currently the preview of Mermaid diagrams is not available directly in the editor, but you can view the result on the mobile app or the preview. To get a real-time preview of you diagrams, use the [online editor providedd by Mermaid](https://mermaid.live/edit).
 
-## 🚧 Under Construction
+## Basic syntax
+To insert a Mermaid diagram, use a dedicated code block with the following syntax: 
+
+<pre>
+```mermaid
+Your mermaid code here
+```
+</pre>
+
+## Diagram example
+
+<pre>
+```mermaid
+classDiagram
+    Animal <|-- Duck
+    Animal <|-- Fish
+    Animal <|-- Zebra
+    Animal : +int age
+    Animal : +String gender
+    Animal: +isMammal()
+    Animal: +mate()
+    class Duck{
+      +String beakColor
+      +swim()
+      +quack()
+    }
+    class Fish{
+      -int sizeInFeet
+      -canEat()
+    }
+    class Zebra{
+      +bool is_wild
+      +run()
+    }
+```
+</pre>
