--- a/content/guide/2.user/6.content/2.wysiwyg/2.mermaid.md
+++ b/content/guide/2.user/6.content/2.wysiwyg/2.mermaid.md
@@ -3,6 +3,42 @@ title: "Mermaid"
 description: "Guide pour intégrer du contenu Mermaid à votre parcours de formation."
 icon: "lucide:chart-area"
 ---
-Dans l'éditeur WYSIWYG, vous pouvez rédiger du code mermaid.
+Dans l'éditeur WYSIWYG, vous pouvez rédiger du code Mermaid. Actuellement, l'aperçu des diagrammes Mermaid n'est pas disponible directement dans l'éditeur, mais vous pouvez visualiser le résultat sur l'application mobile ou l'aperçu. Pour obtenir un aperçu en temps réel de vos diagrammes, utilisez [l'éditeur en ligne proposé par Mermaid](https://mermaid.live/edit).
 
-## 🚧 En construction
+## Syntaxe de base
+
+Pour insérer un diagramme Mermaid, utilisez une balise de code dédiée avec la syntaxe suivante : 
+
+<pre>
+```mermaid
+Votre code mermaid ici
+```
+</pre>
+
+## Exemple de diagramme
+
+<pre>
+```mermaid
+classDiagram
+    Animal <|-- Duck
+    Animal <|-- Fish
+    Animal <|-- Zebra
+    Animal : +int age
+    Animal : +String gender
+    Animal: +isMammal()
+    Animal: +mate()
+    class Duck{
+      +String beakColor
+      +swim()
+      +quack()
+    }
+    class Fish{
+      -int sizeInFeet
+      -canEat()
+    }
+    class Zebra{
+      +bool is_wild
+      +run()
+    }
+```
+</pre>
