fix: handbrake preset

--- a/content/en/guide/2.user/6.content/3.video.md
+++ b/content/en/guide/2.user/6.content/3.video.md
@@ -47,11 +47,11 @@ Download FFmpeg
 
 ```sh
 # Encoding a video where "video.mp4" is the original video and "video-min.mp4" is the compressed video
-ffmpeg -i video.mp4 -s hd480 -c:v libx264 -crf 23 -c:a aac -strict -2 "video-min.mp4"
+ffmpeg -i video.mp4 -vf "scale=-2:480" -c:v libx264 -crf 23 -c:a aac -strict -2 "video-min.mp4"
 
 # Encoding all videos in a folder
 for file in $(find . -name "*.mp4" | sort -z); do
-    ffmpeg -i "${file}" -s hd480 -c:v libx264 -crf 23 -c:a aac -strict -2 "${file%.*}-min.mp4"
+    ffmpeg -i "${file}" -vf "scale=-2:480" -c:v libx264 -crf 23 -c:a aac -strict -2 "${file%.*}-min.mp4"
 done
 ```
 
@@ -65,7 +65,7 @@ Download HandBrake
 
 ::steps{level=5}
 ##### Open HandBrake and load your video file
-##### Select the "HQ 480p30" preset
+##### Select the "General > Fast 480p30" preset
 ##### Make sure the output format is MP4 and the video codec is H.264.
 ##### Choose an output location and name for the video
 ##### Click "Start" to begin encoding.
