--- a/content/guide/2.user/6.content/3.video.md
+++ b/content/guide/2.user/6.content/3.video.md
@@ -48,11 +48,11 @@ Télécharger FFmpeg
 
 ```sh
 # Encodage d'une vidéo ou "video.mp4" est la vidéo d'origine et "video-min.mp4" est la vidéo compressée
-ffmpeg -i video.mp4 -s hd480 -c:v libx264 -crf 23 -c:a aac -strict -2 "video-min.mp4"
+ffmpeg -i video.mp4 -vf "scale=-2:480" -c:v libx264 -crf 23 -c:a aac -strict -2 "video-min.mp4"
 
 # Encodage de toutes les videos d'un dossier
 for file in $(find . -name "*.mp4" | sort -z); do
-    ffmpeg -i "${file}" -s hd480 -c:v libx264 -crf 23 -c:a aac -strict -2 "${file%.*}-min.mp4"
+    ffmpeg -i "${file}" -vf "scale=-2:480" -c:v libx264 -crf 23 -c:a aac -strict -2 "${file%.*}-min.mp4"
 done
 ```
 
@@ -67,7 +67,7 @@ Télécharger HandBrake
 
 ::steps{level=5}
 ##### Ouvrez HandBrake et chargez votre fichier vidéo
-##### Sélectionnez le préréglage "HQ 480p30"
+##### Sélectionnez le préréglage "General > Fast 480p30"
 ##### Assurez-vous que le format de sortie est MP4 et que le codec vidéo est H.264.
 ##### Choisissez un emplacement et un nom de sortie pour la vidéo
 ##### Cliquez sur "Démarrer" pour commencer l'encodage.
